env/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://rereverb-user-service.default.svc.cluster.local:8080/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/auth/login"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-UserUUID"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: rereverb-user-service
          servicePort: 8080
        path: /users/me
      - backend:
          serviceName: rereverb-user-service
          servicePort: 8080
        path: /users/.+
      - backend:
          serviceName: rereverb-order-service
          servicePort: 8090
        path: /orders/
      - backend:
          serviceName: rereverb-order-service
          servicePort: 8090
        path: /orders/.+
      - backend:
          serviceName: rereverb-order-service
          servicePort: 8090
        path: /orders/.+/.+
      - backend:
          serviceName: rereverb-advertisement-service
          servicePort: 8085
        path: /advertisements/
      - backend:
          serviceName: rereverb-advertisement-service
          servicePort: 8085
        path: /advertisements/.+
      - backend:
          serviceName: rereverb-advertisement-service
          servicePort: 8085
        path: /advertisements/.+/.+
